JumpScript/tests/baselines/reference/FunctionPropertyAssignments5_es6.errors.txt
tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments5_es6.jump(1,13): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments5_es6.jump (1 errors) ====
    var v = { *[foo()]() { } }
                ~~~
!!! error TS2304: Cannot find name 'foo'.